# Platformer

./: CMakeLists.txt
SDL2/: WhatsNew.txt
SDL2/docs/: CONTRIBUTING.md  README-android.md  README-directfb.md  README-dynapi.md  README-gdk.md  README-git.md  README-ios.md  README-linux.md  README-macos.md  README-n3ds.md  README-nacl.md  README-os2.md  README-porting.md  README-ps2.md  README-psp.md  README-raspberrypi.md  README-vita.md  README-winrt.md  doxyfile  release_checklist.md
SDL2/i686-w64-mingw32/share/aclocal/: sdl2.m4
SDL2/test/: acinclude.m4
SDL2/x86_64-w64-mingw32/include/SDL2/: SDL.h  SDL_assert.h  SDL_audio.h  SDL_events.h  SDL_filesystem.h  SDL_haptic.h  SDL_hints.h  SDL_main.h  SDL_sensor.h  SDL_system.h  SDL_timer.h  SDL_video.h
scripts/: debug.cpp  debug.h  eventhandle.cpp  inputhandle.cpp  inputhandle.h  main.cpp  main.h  player.cpp  player.h  render.cpp  render.h
scripts/utility/: color.h  vector2.cpp  vector2.h
src/: debug.cpp  debug.h  eventhandle.cpp  eventhandle.h  ground.cpp  ground.h  inputhandle.cpp  inputhandle.h  level.cpp  level.h  level1.cpp  level1.h  main.cpp  main.h  player.cpp  player.h  renderer.cpp  renderer.h
src/utility/: BoxCollider.cpp  BoxCollider.h  collider.cpp  collider.h  color.cpp  color.h  line.cpp  line.h  object.cpp  object.h  physicsBody.cpp  physicsBody.h  vector2.cpp  vector2.h
